// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pre pip notification form renders to match shapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PrePipNotificationForm
    fellowFeedback={
        Object {
            "Attribute": null,
            "Context": "Hi Sinmiloluwa",
            "Criteria": "lms",
            "Manager": Object {
              "email": "trust.birungi@andela.com",
              "name": "Trust Birungi",
            },
            "Recommendation": null,
            "fellowFeedback": Object {},
            "index": "0",
            "name": "Sinmiloluwa Oloyede",
          }
    }
    history={
        Array [
            "/feedback",
          ]
    }
    store={
        Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="feedbackDashboard container-fluid"
>
          <div
                    className="row"
          >
                    <PrePipNotificationOutline
                              fellowFeedback={
                                        Object {
                                                  "Attribute": null,
                                                  "Context": "Hi Sinmiloluwa",
                                                  "Criteria": "lms",
                                                  "Manager": Object {
                                                    "email": "trust.birungi@andela.com",
                                                    "name": "Trust Birungi",
                                                  },
                                                  "Recommendation": null,
                                                  "fellowFeedback": Object {},
                                                  "index": "0",
                                                  "name": "Sinmiloluwa Oloyede",
                                                }
                              }
                              serialNumber={1}
                    />
          </div>
</div>,
        <div>
          <button
                    className="btn-print-prepip-form"
                    onClick={[Function]}
                    type="button"
          >
                    Download as PDF
          </button>
</div>,
      ],
      "className": "prepipOutline",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row"
>
            <PrePipNotificationOutline
                        fellowFeedback={
                                    Object {
                                                "Attribute": null,
                                                "Context": "Hi Sinmiloluwa",
                                                "Criteria": "lms",
                                                "Manager": Object {
                                                  "email": "trust.birungi@andela.com",
                                                  "name": "Trust Birungi",
                                                },
                                                "Recommendation": null,
                                                "fellowFeedback": Object {},
                                                "index": "0",
                                                "name": "Sinmiloluwa Oloyede",
                                              }
                        }
                        serialNumber={1}
            />
</div>,
          "className": "feedbackDashboard container-fluid",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <PrePipNotificationOutline
              fellowFeedback={
                            Object {
                                          "Attribute": null,
                                          "Context": "Hi Sinmiloluwa",
                                          "Criteria": "lms",
                                          "Manager": Object {
                                            "email": "trust.birungi@andela.com",
                                            "name": "Trust Birungi",
                                          },
                                          "Recommendation": null,
                                          "fellowFeedback": Object {},
                                          "index": "0",
                                          "name": "Sinmiloluwa Oloyede",
                                        }
              }
              serialNumber={1}
/>,
            "className": "row",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "fellowFeedback": Object {
                "Attribute": null,
                "Context": "Hi Sinmiloluwa",
                "Criteria": "lms",
                "Manager": Object {
                  "email": "trust.birungi@andela.com",
                  "name": "Trust Birungi",
                },
                "Recommendation": null,
                "fellowFeedback": Object {},
                "index": "0",
                "name": "Sinmiloluwa Oloyede",
              },
              "serialNumber": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn-print-prepip-form"
            onClick={[Function]}
            type="button"
>
            Download as PDF
</button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Download as PDF",
            "className": "btn-print-prepip-form",
            "onClick": [Function],
            "type": "button",
          },
          "ref": null,
          "rendered": "Download as PDF",
          "type": "button",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="feedbackDashboard container-fluid"
>
            <div
                        className="row"
            >
                        <PrePipNotificationOutline
                                    fellowFeedback={
                                                Object {
                                                            "Attribute": null,
                                                            "Context": "Hi Sinmiloluwa",
                                                            "Criteria": "lms",
                                                            "Manager": Object {
                                                              "email": "trust.birungi@andela.com",
                                                              "name": "Trust Birungi",
                                                            },
                                                            "Recommendation": null,
                                                            "fellowFeedback": Object {},
                                                            "index": "0",
                                                            "name": "Sinmiloluwa Oloyede",
                                                          }
                                    }
                                    serialNumber={1}
                        />
            </div>
</div>,
          <div>
            <button
                        className="btn-print-prepip-form"
                        onClick={[Function]}
                        type="button"
            >
                        Download as PDF
            </button>
</div>,
        ],
        "className": "prepipOutline",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row"
>
              <PrePipNotificationOutline
                            fellowFeedback={
                                          Object {
                                                        "Attribute": null,
                                                        "Context": "Hi Sinmiloluwa",
                                                        "Criteria": "lms",
                                                        "Manager": Object {
                                                          "email": "trust.birungi@andela.com",
                                                          "name": "Trust Birungi",
                                                        },
                                                        "Recommendation": null,
                                                        "fellowFeedback": Object {},
                                                        "index": "0",
                                                        "name": "Sinmiloluwa Oloyede",
                                                      }
                            }
                            serialNumber={1}
              />
</div>,
            "className": "feedbackDashboard container-fluid",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <PrePipNotificationOutline
                fellowFeedback={
                                Object {
                                                "Attribute": null,
                                                "Context": "Hi Sinmiloluwa",
                                                "Criteria": "lms",
                                                "Manager": Object {
                                                  "email": "trust.birungi@andela.com",
                                                  "name": "Trust Birungi",
                                                },
                                                "Recommendation": null,
                                                "fellowFeedback": Object {},
                                                "index": "0",
                                                "name": "Sinmiloluwa Oloyede",
                                              }
                }
                serialNumber={1}
/>,
              "className": "row",
            },
            "ref": Object {
              "current": null,
            },
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "fellowFeedback": Object {
                  "Attribute": null,
                  "Context": "Hi Sinmiloluwa",
                  "Criteria": "lms",
                  "Manager": Object {
                    "email": "trust.birungi@andela.com",
                    "name": "Trust Birungi",
                  },
                  "Recommendation": null,
                  "fellowFeedback": Object {},
                  "index": "0",
                  "name": "Sinmiloluwa Oloyede",
                },
                "serialNumber": 1,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn-print-prepip-form"
              onClick={[Function]}
              type="button"
>
              Download as PDF
</button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Download as PDF",
              "className": "btn-print-prepip-form",
              "onClick": [Function],
              "type": "button",
            },
            "ref": null,
            "rendered": "Download as PDF",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Pre pip notification form renders to match shapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(PrePipNotificationForm)
    store={
        Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "dispatch": [Function],
      "fellowFeedback": Object {
        "feedback": Array [],
        "fellowFeedback": Object {},
      },
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "dispatch": [Function],
        "fellowFeedback": Object {
          "feedback": Array [],
          "fellowFeedback": Object {},
        },
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "storeSubscription": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): Object {
    "storeSubscription": undefined,
  },
}
`;
